--- a/index.html
+++ b/index.html
@@ -8,27 +8,47 @@
 </head>
 <body>
     <div class="nav-menu">
-
+        <h2>Header Logo</h2>
+        <a href="">header link one</a>
+        <a href="">header link two</a>
+        <a href="">header link three</a>
     </div>
 
     <div class="launch-heading">
-
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. 
+            It's a smaller font and the color is a lower contrast</p>
+        <a href="">Sign up</a>
+        <img src="https://via.placeholder.com/150">
     </div>
 
     <div class="sub-panel">
-
+        <h1>Some random information</h1>
+        <span class="sub-panel-boxes"></span>
+        <p>this is some subtext under an illustration or image</p>
+        <span class="sub-panel-boxes"></span>
+        <p>this is some subtext under an illustration or image</p>
+        <span class="sub-panel-boxes"></span>
+        <p>this is some subtext under an illustration or image</p>
+        <span class="sub-panel-boxes"></span>
+        <p>this is some subtext under an illustration or image</p>
     </div>
 
-    <div class="qoute-panel">
-
+    <div class="quote-panel">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe 
+            people will actually read it. Who knows? All I know is that it looks nice.
+        </p>
+        <p><strong>-Thor, God of Thunder</strong></p>
     </div>
 
     <div class="call-action">
-
+        <p>Call to action time! It's time!</p>
+        <p>Sign up here for our product by clicking that button right over there!</p>
+        <a href="">Sign up</a>
     </div>
 
     <footer>
-        
+        <p>Copyright © The Odin Project 2021</p>
     </footer>
 </body>
 </html>
