--- a/index.html
+++ b/index.html
@@ -4,37 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Launch page</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Launch Page Practice</title>
 </head>
 <body>
     <div class="nav-menu">
         <h2>Header Logo</h2>
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
+        <div class="nav-links">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
+        </div>
     </div>
 
-    <div class="launch-heading">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. 
+    <div class="hero-header">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. 
             It's a smaller font and the color is a lower contrast</p>
-        <a href="">Sign up</a>
-        <img src="https://via.placeholder.com/150">
+            <a href="" class="hero-btn">Sign up</a>
+        </div>
+
+        <div class="hero-right">
+            <span class="placeholder-img">this is a placeholder for an image</span>
+        </div>
+    
     </div>
 
-    <div class="sub-panel">
-        <h1>Some random information</h1>
-        <span class="sub-panel-boxes"></span>
-        <p>this is some subtext under an illustration or image</p>
-        <span class="sub-panel-boxes"></span>
-        <p>this is some subtext under an illustration or image</p>
-        <span class="sub-panel-boxes"></span>
-        <p>this is some subtext under an illustration or image</p>
-        <span class="sub-panel-boxes"></span>
-        <p>this is some subtext under an illustration or image</p>
+    <div class="information-header">
+        <h1>Some random information.</h1>
+        <div class="box-container">
+            <div class="info-box">
+                <span class="box-img"></span>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <span class="box-img"></span>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <span class="box-img"></span>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="info-box">
+                <span class="box-img"></span>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
 
-    <div class="quote-panel">
+    <div class="quote-section">
         <p>This is an inspiring quote, or a testimonial from a customer. Maybe 
             people will actually read it. Who knows? All I know is that it looks nice.
         </p>
@@ -44,7 +63,7 @@
     <div class="call-action">
         <p>Call to action time! It's time!</p>
         <p>Sign up here for our product by clicking that button right over there!</p>
-        <a href="">Sign up</a>
+        <a href="" class="action-btn">Sign up</a>
     </div>
 
     <footer>
