Add styling to call to action and footer section

--- a/index.html
+++ b/index.html
@@ -77,13 +77,19 @@
     </div>
 
     <div class="call-action">
-        <p>Call to action time! It's time!</p>
-        <p>Sign up here for our product by clicking that button right over there!</p>
-        <a href="" class="action-btn">Sign up</a>
+        <section class="call-wrapper">
+            <div class="call-left">
+                <p><strong>Call to action time! It's time!</strong></p>
+                <p>Sign up here for our product by clicking that button right over there!</p>
+            </div>
+            <div class="call-right">
+                <a href="" class="action-btn">Sign up</a>
+            </div>
+        </section>
     </div>
 
     <footer>
-        <p>Copyright © The Odin Project 2021</p>
+        <p>Copyright © My Project 2022</p>
     </footer>
 </body>
 </html>
